--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,13 @@
-//
+html, body {
+    background-color: #fed541;
+    color: #000;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 200;
+    height: 100vh;
+    margin: 0;
+}
+.mainlogo {
+    border: solid 2px #000;
+    transform: rotate(-20deg);
+    border-radius: 5px;
+}
